hphp/hack/test/typecheck/reified_generics/newable_targ_basic.php.exp
File "newable_targ_basic.php", line 12, characters 26-26:
The type parameter T has the <<__Newable>> attribute. Newable type parameters must be constrained with `as`, and exactly one of those constraints must be a valid newable class. The class must either be final or have a constructor that is consistent. This can be accomplished by making the constructor final or having <<__ConsistentConstruct>>. No constraints are valid newable classes (Typing[4308])
File "newable_targ_basic.php", line 15, characters 5-6:
A newable type argument must be a concrete class or a newable type parameter. (Typing[4307])
  File "newable_targ_basic.php", line 12, characters 26-26:
  Type parameter T was declared __Newable here
File "newable_targ_basic.php", line 16, characters 5-11:
A newable type argument must be a concrete class or a newable type parameter. (Typing[4307])
  File "newable_targ_basic.php", line 12, characters 26-26:
  Type parameter T was declared __Newable here
File "newable_targ_basic.php", line 20, characters 5-5:
A newable type argument must be a concrete class or a newable type parameter. (Typing[4307])
  File "newable_targ_basic.php", line 12, characters 26-26:
  Type parameter T was declared __Newable here
File "newable_targ_basic.php", line 21, characters 5-5:
A newable type argument must be a concrete class or a newable type parameter. (Typing[4307])
  File "newable_targ_basic.php", line 12, characters 26-26:
  Type parameter T was declared __Newable here
File "newable_targ_basic.php", line 22, characters 5-5:
A newable type argument must be a concrete class or a newable type parameter. (Typing[4307])
  File "newable_targ_basic.php", line 12, characters 26-26:
  Type parameter T was declared __Newable here
File "newable_targ_basic.php", line 23, characters 5-6:
A newable type argument must be a concrete class or a newable type parameter. (Typing[4307])
  File "newable_targ_basic.php", line 12, characters 26-26:
  Type parameter T was declared __Newable here
